--- a/package.json
+++ b/package.json
@@ -8,8 +8,12 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@vuelidate/validators": "^2.0.0",
+    "app-my-library": "^0.0.12",
     "core-js": "^3.8.3",
-    "vue": "^3.2.13"
+    "touch": "^3.1.0",
+    "vue": "^3.2.13",
+    "vue-router": "^4.1.5"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
