--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@vuelidate/validators": "^2.0.0",
+    "@vuepic/vue-datepicker": "^3.5.3",
     "app-my-library": "^0.0.12",
     "axios": "^1.1.3",
     "core-js": "^3.8.3",
