--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "app-my-library": "^0.0.12",
     "axios": "^1.1.3",
     "core-js": "^3.8.3",
+    "draggable": "^4.2.0",
     "touch": "^3.1.0",
     "vue": "^3.2.13",
+    "vue-popperjs": "^2.3.0",
     "vue-router": "^4.1.5"
   },
   "devDependencies": {
