--- a/package.json
+++ b/package.json
@@ -14,14 +14,17 @@
     "axios": "^1.1.3",
     "core-js": "^3.8.3",
     "draggable": "^4.2.0",
+    "throttle-debounce": "^5.0.0",
     "touch": "^3.1.0",
     "vue": "^3.2.13",
+    "vue-debounce": "^4.0.0",
     "vue-popperjs": "^2.3.0",
     "vue-router": "^4.1.5"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
     "@babel/eslint-parser": "^7.12.16",
+    "@types/throttle-debounce": "^5.0.0",
     "@typescript-eslint/eslint-plugin": "^5.4.0",
     "@typescript-eslint/parser": "^5.4.0",
     "@vue/cli-plugin-babel": "~5.0.0",
