--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@headlessui/vue": "^1.7.11",
     "@vuelidate/validators": "^2.0.0",
     "@vuepic/vue-datepicker": "^3.5.3",
     "app-my-library": "^0.0.12",
