--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "axios": "^1.1.3",
     "core-js": "^3.8.3",
     "draggable": "^4.2.0",
+    "serverless-http": "^3.2.0",
     "throttle-debounce": "^5.0.0",
     "touch": "^3.1.0",
     "vue": "^3.2.13",
